<resources>
    <string name="app_name">KotlinBasics</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="description">description</string>
    <string name="title_activity_launch">KotlinBasics</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="enter_something">Enter Something!</string>
    <string name="normal">Normal</string>
    <string name="basics">Basics</string>
    <string name="list">List</string>
    <string name="sample">Sample</string>
    <string name="binding">Binding</string>
    <string name="login">Login</string>
    <string name="view_model">View Model</string>
    <string name="preferences">Preferences</string>
</resources>
