<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_rectangle"
    android:padding="5dp">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/normal"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



    <Button
        android:id="@+id/btnNormalSample"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv1" />


    <Button
        android:id="@+id/btnNormalList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNormalSample" />

    <Button
        android:id="@+id/btnNormalBasic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/basics"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNormalList" />

    <Button
        android:id="@+id/btnViewModel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_model"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNormalBasic" />

    <Button
        android:id="@+id/btnPref"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preferences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnViewModel" />


</android.support.constraint.ConstraintLayout>